--- a/PierresOrders.Tests/PierresOrders.Tests.csproj
+++ b/PierresOrders.Tests/PierresOrders.Tests.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ProjectName\ProjectName.csproj" />  
+    <ProjectReference Include="..\PierresOrders\PierresOrders.csproj" />  
   </ItemGroup>
 
 </Project>
